apacherr/deployment/01-k8s-apacherr-ns.yaml
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "apacherr"
  labels:
    name: "apacherr"
