apacherr/deployment/04-k8s-apacherr-dpl.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apacherr
  namespace: apacherr
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: apacherr
  template:
    metadata:
      labels:
        app: apacherr
    spec:
      containers:
      - name: apacherr
        image: lgirardi/apacherr:v0.3
        resources:
          limits:
            cpu: 300m
            memory: 250Mi
          requests:
            cpu: 30m
            memory: 125Mi
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: apacherr-80-config
          mountPath: /usr/local/apache2/conf/custom          
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 45
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          timeoutSeconds: 10
      volumes:
        - name: apacherr-80-config 
          configMap:
            name: apacherr-80-config
