apacherr/deployment/02-k8s-apacherr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apacherr-svc
  namespace: apacherr
  labels:
    app: apacherr
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: apacherr
