apacherr/deployment/03-k8s-apacherr-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apacherr-ingress
  namespace: apacherr
  annotations:
#    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: apacherr-svc
          servicePort: 80
#  tls:
#  - hosts:
#    - www.example.com
#    secretName: tls-www-example-com
